--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="icon" type="image/png" href="./memories.png">
-    <title>Memories</title>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <!-- <meta name="theme-color" content="#000000" /> -->
+    <!-- <meta name="description" content="Web site created using create-react-app" /> -->
+    <!-- <link rel="icon" type="image/png" href="./memories.png"> -->
+    <title>Syn_bio_vis</title>
   </head>
   <body>
     <div id="root"></div>
